# udp_ftp_stateless

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/recv/: mod.rs  mod_old_vec.rs  mod_sync.rs  models.rs  old_main.rs  old_mod_vec.rs  raptor_vec_mod.rs
src/send/: mod.rs  raptor.rs  raptorQ.rs
src/udp/: mod.rs
