[package]
name = "udp_ftp_stateless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe = "forbid"
unused = "allow"  # For exploratory dev

[dependencies]
raptorq = "1.8.0"
raptor-code = "1.0.6"
dotenv = "0.15.0"
uuid = "1.6.1"
bincode = "1.3.3"
